# commonplace

./: .coverage  .gitignore  .pre-commit-config.yaml  Default (Linux).sublime-keymap  Default (Windows).sublime-keymap  Justfile  MANIFESTO.md  README.creole  README.md  TODO.md  commonplace.py  commonplace.tmPreferences  pyproject.toml
.claude/: CLAUDE.md  instructions.md
.claude-plugin/: marketplace.json
.github/workflows/: test.yml
docs/: import-format.md
plugins/commonplace-skills/.claude-plugin/: plugin.json
plugins/commonplace-skills/agents/: commonplace-guide.md
plugins/commonplace/.claude-plugin/: plugin.json
plugins/commonplace/agents/: commonplace-guide.md
sample/: sample.creole  sample.md
src/commonplace/: __init__.py  __main__.py  _claude.py  _config.py  _gemini.py  _git.py  _heatmap.py  _journal.py  _llm.py  _logging.py  _progress.py  _repo.py  _stats.py  _store.py  _types.py  _utils.py
src/commonplace/_import/: __init__.py  _chatgpt.py  _claude.py  _claude_code.py  _commands.py  _gemini.py  _serializer.py  _types.py
src/commonplace/_search/: __init__.py  _chunker.py  _commands.py  _embedder.py  _sqlite.py  _store.py  _types.py
tests/: conftest.py  test_blobs.py  test_chunker.py  test_claude_importer.py  test_config.py  test_config_error_handling.py  test_embedder.py  test_git.py  test_git_selective_commit.py  test_heatmap.py  test_import.py  test_import_claude.py  test_index.py  test_journal.py  test_main.py  test_progress.py  test_repo.py  test_stats.py  test_store.py  test_sync.py  test_types.py  test_utils.py
(+12 files in other folders)
