[project]
description = "Personal knowledge management tool for the augmented self."
name = "commonplace"
dynamic = ["version"]
readme = "README.md"
authors = [{ name = "Joe Halliwell", email = "joe.halliwell@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "html-to-markdown>=1.3.3",
    "mdformat>=0.7.22",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-gfm>=0.4.1",
    "pydantic >=2.0.0",
    "python-dotenv >=1.0.0",
    "tqdm >=4.66.0",
    "pydantic-settings>=2.10.0",
    "pygit2>=1.15.0",
    "llm>=0.13.0",
    "llm-gemini>=0.23",
    "llm-claude>=0.4.2",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "humanize>=4.0.0",
    "platformdirs>=4.0.0",
    "cyclopts==4.1.0",              # There's a bug in 4.2.0
]

[dependency-groups]
dev = [
    "pytest >=8.1.1",
    "pytest-cov >=4.1.0",
    "ruff >=0.2.0",
    "mypy >=1.8.0",
    "pytest-snapshot>=0.9.0",
    "types-python-dateutil>=2.8.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
commonplace = "commonplace:__main__.app.meta"

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.hatch.version]
source = "versioningit"
